--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
-
-
 # Mysql
-MYSQL_USER=demo
-MYSQL_PASSWORD=Demo@123
+MYSQL_USER=root
+MYSQL_PASSWORD=root
 MYSQL_SERVER=localhost
-MYSQL_PORT=3306
-MYSQL_DB=fastapi
+MYSQL_PORT=8889
+MYSQL_DB=fastapi_auth
