--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,29 @@
+annotated-types==0.7.0
+anyio==3.7.1
+bcrypt==4.1.3
+cffi==1.16.0
+click==8.1.7
+cryptography==42.0.8
+dnspython==2.6.1
+ecdsa==0.19.0
+email_validator==2.2.0
 fastapi==0.103.1
-uvicorn==0.23.2
-python-dotenv==1.0.0
+h11==0.14.0
+idna==3.7
+passlib==1.7.4
+pyasn1==0.6.0
+pycparser==2.22
+pydantic==2.8.2
 pydantic-settings==2.0.3
-passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.3.0
-pymysql==1.1.0
+pydantic_core==2.20.1
+PyMySQL==1.1.0
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.9
+rsa==4.9
+six==1.16.0
+sniffio==1.3.1
 SQLAlchemy==2.0.20
+starlette==0.27.0
+typing_extensions==4.12.2
+uvicorn==0.23.2
